--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <h1>Index: </h1>
     </br>
     <p><a href="/Homework1/Homework1.html">Homework #1</a> | due August 28th 2021 | Beginning Project</p>
-    <p><a href="/Homework2/Homework2.html">Homework #2</a> | due August 31st 2021 | Using html, aka "Cheese Project"</p>
+    <p><a href="\Users\Pleas\Desktop\DaveIsAnCoolDude\Homework2\Homework2.html">Homework #2</a> | due August 31st 2021 | Using html, aka "Cheese Project"</p>
     </body>
 </html>
