--- a/Homework2/Homework2.html
+++ b/Homework2/Homework2.html
@@ -140,7 +140,7 @@ Cheese:The Dangers Of Cheese
 setInterval(increase,10);
     </script>
     <script>
-        for(var i=0;i<10000;i++){
+        for(var i=0;i<10000000;i++){
             document.write("<h class='hi'>");
             document.write("<p class='cheese'>Cheesus is good</br></p>");
             document.write("</h>")
