Dr Hamlin, can you please check this out, my code hates me and I hate it back

--- a/Blackjack/Blackjack.html
+++ b/Blackjack/Blackjack.html
@@ -2,27 +2,33 @@
 <html>
     <head>
         <p id="totally"></p>
-        <script src="Blackjack.js"></script>
         <link rel="stylesheet" href="Blackjack.css">
     </head>
     <body onload="start()">
-<script src="Blackjack.js">
+<script src="Blackjack.js"></script>
+<script>
+
 function stop(){
     stand=true;
 }
+function checkwin(){
+if(stand==true){
+    winconditions();
+    
+}
+}
+
+setInterval(checkwin,1000);
     </script>
     <div class="cheese">
-        <h1 class="houseplay">
-        <img src="png/10_of_clubs.png" width="10%" height="10%" class="house">
-        <img src="png/10_of_diamonds.png" width="10%" height="10%" class="house">
+        <h1 class="houseplay" id="suckme">
         </h1>
         <div class="button">
         <button id="Stretch" onclick="stop()">Stand</button>
-        <button onclick="hit(player)">Hit</button>
+        <p id="potato"></p>
+        <button id="hitter" onclick="hit(player)">Hit</button>
         </div>
         <h1 class="playerplay">
-            <img src="png/2_of_clubs.png" width="10%" height="10%" class="player">
-            <img src="png/2_of_clubs.png" width="10%" height="10%" class="player">
         </h1>
     </div>
     </body>
