--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     </br>
     <p><a href="/Homework1/Homework1.html">Homework #1</a> | due August 28th 2021 | Beginning Project</p>
     <p><a href="\Users\Pleas\Desktop\DaveIsAnCoolDude\Homework2\Homework2.html">Homework #2</a> | due August 31st 2021 | Using html, aka "Cheese Project"</p>
+    <p><a href="\Users\Pleas\Desktop\DaveIsAnCoolDude\Blackjack\Blackjack.html">Blackjack</a></p>
     </body>
 </html>
