Changed Variable names for you doctor hamlin.

--- a/Blackjack/Blackjack.html
+++ b/Blackjack/Blackjack.html
@@ -21,7 +21,7 @@ if(stand==true){
 setInterval(checkwin,1000);
     </script>
     <div class="cheese">
-        <h1 class="houseplay" id="suckme">
+        <h1 class="houseplay" id="heck">
         </h1>
         <div class="button">
         <button id="Stretch" onclick="stop()">Stand</button>
