--- a/Blackjack/Blackjack.html
+++ b/Blackjack/Blackjack.html
@@ -13,22 +13,21 @@ function stop(){
 }
 function checkwin(){
 if(stand==true){
-    winconditions();
-    
+    winconditions();   
 }
 }
 
 setInterval(checkwin,1000);
     </script>
     <div class="cheese">
-        <h1 class="houseplay" id="heck">
+        <h1 class="houseplay" id="hurkey">
         </h1>
         <div class="button">
         <button id="Stretch" onclick="stop()">Stand</button>
         <p id="potato"></p>
         <button id="hitter" onclick="hit(player)">Hit</button>
         </div>
-        <h1 class="playerplay">
+        <h1 class="playerplay" id="heck">
         </h1>
     </div>
     </body>
