--- a/BlackjackFun/static/index.html
+++ b/BlackjackFun/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="suck.css">
 <title>BlackJack</title>
 </head>
 <body>
@@ -17,5 +18,7 @@
         <input type="hidden" value="Stand" name="command">
         <input type="submit" value="Stand">
     </form>
+    <div id="cheddar"></div>
+    <p id="potato"></p>
 </body>
 </html>
