i dont know how but i can do this

--- a/SignOfGod/static/index.html
+++ b/SignOfGod/static/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
-</head>
-<body>
+    <title>cheese</title>
     <script>
-        function out(){
-            window.open("http://192.168.3.29:6969/Out.html",true);
+        function signin(){
+        window.open("http://192.168.3.29:6969/signin.html",true);
         }
-        function into(){
-            window.open("http://192.168.3.29:6969/In.html",true);
+        function signout(){
+            window.open("http://192.168.3.29:6969/signout.html",true)
         }
     </script>
-    <button type="button" onclick="into()">Sign In</button>
-    <button type="button" onclick="out()">Sign Out</button>
+</head>
+
+<body>
+    <script src="SIgnOfGod.js"></script>
+    <button type="button" onclick="signin()">sign in</button>
+    <button type="button" onclick="signout()">sign out</button>
+    
 </body>
 </html>
