--- a/connect4thingy/static/Index.html
+++ b/connect4thingy/static/Index.html
@@ -3,8 +3,13 @@
 <head>
 </head>
 <body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket=io();
+  </script>
+  <canvas id="canvasthing" width="700" height="600"></canvas>
+  <script src="/static/connect4.js"></script>
+
     
-    <canvas id="canvasthing" width="700" height="600"></canvas>
-    <script src="connect4.js"></script>
 </body>
 </html>
