--- a/AITestThingy/index.html
+++ b/AITestThingy/index.html
@@ -4,6 +4,7 @@
     <title>Thingy</title>
 </head>
 <body>
+    <div id="cheddar"></div>
     <canvas id="canvasthingy" width="500", height="700"></canvas>
     <script src="script.js"></script>
 </body>
