--- a/SignOfGod/static/signout.html
+++ b/SignOfGod/static/signout.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="signout.css">
 </head>
 <body>
+    <h1 style="font-size: 69px">Sign Out Here</h1>
     <script src="SignOfGod.js"></script>
     <div id="radioshack"></div>
     <script>
@@ -32,10 +33,10 @@ cheetoes(selectedValue);
 something();
     </script>
         <label for="firstname">First name:</label><br>
-        <input type="text" id="firstname" name="firstname"><br>
+        <input type="text" id="firstname" name="firstname" autocomplete="off"><br>
         <label for="lastname">Last name:</label><br>
-        <input type="text" id="lastname" name="lastname"><br><br>
-        <button onclick="cuck()">submit</button>
+        <input type="text" id="lastname" name="lastname" autocomplete="off"><br><br>
+        <button id="frick" onclick="cuck()">submit</button>
 
 </body>
 </html>
